# Thalos-Prime-Directive

./: .env.example  .gitignore  AUTO_WEB_DEPLOY_IMPLEMENTATION.md  BUILD_COMPLETE.md  CHANGELOG.md  CI_FIX_SUMMARY.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_VERIFICATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PR_SUMMARY.md  QUICKSTART.md  README.md  README_V2.md  SECURITY.md  VERIFICATION_REPORT.md  WEB_DEPLOYMENT_GUIDE.md  WEB_TRANSFORMATION_SUMMARY.md  auto_deploy.bat  auto_deploy.py  auto_deploy.sh  conftest.py  create_thalos_bootstrap.sh  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  setup.py  start_web.bat  start_web.sh  thalos_prime.py  validate_build.py  verify_deployment.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  copilot-setup-steps.yml
config/: thalos.conf
docs/: 3D_NEURAL_INTERFACE.md  API_REFERENCE.md  ARCHITECTURE.md  ENHANCEMENT_SUMMARY.md  THALOS_PRIME_SPECIFICATION.md
src/: __init__.py  main.py
src/ai/optimization/: neural_optimizer.py
src/codegen/: __init__.py  generator.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  utils.py
src/core/cis/: __init__.py  controller.py  orchestrator.py
src/core/memory/: __init__.py  storage.py
src/interfaces/: __init__.py
src/interfaces/api/: __init__.py  server.py
src/interfaces/chatbot/: conversation.py
src/interfaces/cli/: __init__.py  cli.py
src/interfaces/web/: immersive_server.py  web_server.py
src/interfaces/web/templates/: thalos_3d_interface.html
tests/: __init__.py
tests/integration/: __init__.py  test_chatbot.py  test_system.py  test_web_server.py  test_wetware.py
tests/unit/: __init__.py  test_api.py  test_cis.py  test_cli.py  test_codegen.py  test_core_utils.py  test_memory.py  test_utils.py
